--- a/styles.css
+++ b/styles.css
@@ -1,182 +1,48 @@
-html,
-body {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-ul,
-li {
+*{
   padding: 0;
   margin: 0;
-  list-style-type: none;
+  box-sizing: border-box;
 }
 
-.wrapper {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: gray;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 100%;
-}
-
-.app {
-  -webkit-box-shadow: 0 0 1px 0 black;
-          box-shadow: 0 0 1px 0 black;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  max-width: 500px;
-  width: 100%;
-}
-
-.app__header {
-  background-color: white;
-}
-
-.app__title {
-  font-size: 20px;
-  font-weight: 600;
-  padding: 8px 16px;
-  text-align: center;
-}
-
-.app__info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 8px 16px;
-}
-
-.app__info-item {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.app__body {
-  background-color: white;
-}
-
-.app__footer {
-  background-color: white;
-  padding: 8px 16px;
-}
-
-.app__list-item {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+form{
+  display: inline-block;
+  vertical-align: top;
   position: relative;
 }
-
-.app__list-item:hover {
-  background-color: #fff;
-}
-
-.app__list-item:hover .app__list-remove {
-  opacity: 0.5;
-}
-
-.app__list-item:hover .app__list-remove:hover {
-  opacity: 1;
-}
-
-.app__list-item.app__list-item--done {
-  background-color: #a8ff9d;
-}
-
-.app__list-item.app__list-item--done .app__list-text {
-  text-decoration: line-through;
-}
-
-.app__list-text {
-  cursor: pointer;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  line-height: 24px;
-  padding: 8px 16px;
-}
-
-.app__list-remove {
-  border: 1px solid red;
-  border-radius: 50%;
-  cursor: pointer;
-  height: 32px;
-  fles-shrink: 0;
-  margin-left: auto;
-  margin-right: 5px;
-  opacity: 0;
-  padding: 0 8px;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  -webkit-transition: all linear 0.3s;
-  transition: all linear 0.3s;
-  width: 32px;
-}
-
-.app__list-remove:before, .app__list-remove:after {
-  content: "";
-  background-color: red;
+input[type="text"]{
+  outline: none;
+  border: 2px solid #222;
+  padding: 5px 100px 5px 30px;
   display: block;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.app__list-remove:before {
-  height: 3px;
-  width: 20px;
-}
-
-.app__list-remove:after {
-  height: 20px;
-  width: 3px;
-}
-
-.app__task-new {
-  border: 0;
-  line-height: 40px;
-  min-height: 40px;
-  padding: 0 8px;
   width: 100%;
+  height: 50px;
+  background: #fff;
+  border-radius: 25px;
 }
 
-.mdl-textfield {
+input[type="search"]{
+  outline: none;
+  border: 2px solid #222;
+  padding: 5px 30px 5px 30px;
+  display: block;
   width: 100%;
+  height: 50px;
+  background: #fff;
+  border-radius: 25px;
 }
-/*# sourceMappingURL=styles.css.map */
+
+button[type="submit"]{
+  position: absolute; top: 7px; right: 10px;
+  z-index: 9;
+  outline: none;
+  border: none;
+  display: inline-block;
+  background: #00f;
+  color: #fff;
+  padding: 10px 25px;
+  border-radius: 25px;
+  cursor: pointer;
+}
+button[type="submit"]:hover{
+  background:  #f00;
+}
