--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,15 @@
   box-sizing: border-box;
 }
 
+.container{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+}
+
 form{
   display: inline-block;
   vertical-align: top;
